httpd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpd
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    openshift.io/cluster-monitoring: "true"
spec:
  finalizers:
  - kubernetes
