httpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: httpd
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: httpd
    app.kubernetes.io/name: httpd
    app.kubernetes.io/part-of: httpd
    app.openshift.io/runtime: java
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        imagePullPolicy: Always
        image: registry.access.redhat.com/rhscl/httpd-24-rhel7:latest
        ports:
        - containerPort: 8080
          protocol: TCP
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
