httpd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: httpd
    weight: 100
